src/test/ui/layout/homogeneous-aggr-zero-sized-c-struct.stderr
error: homogeneous_aggregate: Homogeneous(Reg { kind: Float, size: Size { raw: 4 } })
  --> $DIR/homogeneous-aggr-zero-sized-c-struct.rs:22:1
   |
LL | pub type TestMiddle = Middle;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: homogeneous_aggregate: Homogeneous(Reg { kind: Float, size: Size { raw: 4 } })
  --> $DIR/homogeneous-aggr-zero-sized-c-struct.rs:33:1
   |
LL | pub type TestFinal = Final;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

